--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,8 @@
 ---
 # Role default lower priority variables
+
+# tomcat_application_name:
+
+# tomcat_application_instance:
+
+tomcat_application_dirs: []
