--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,7 +13,13 @@
     - role::tomtomcat_applicationcat::check
 
 - name: setup application directories
-  import_tasks: dirs.yml
+  import_tasks: directories.yml
   tags:
     - role::tomcat_application
-    - role::tomcat_application::dirs
+    - role::tomcat_application::directories
+
+- name: setup application datasources
+  import_tasks: datasources.yml
+  tags:
+    - role::tomcat_application
+    - role::tomcat_application::datasources
