--- a/tasks/facts.yml
+++ b/tasks/facts.yml
@@ -14,6 +14,6 @@
     - name: setup tomcat instances facts
       set_fact:
         tomcat_application_server_instances: >-
-          {{ lookup('template', 'tomcat_facts.j2') }}
+          {{ lookup('template', 'tomcat_facts.json.j2') }}
   tags:
     - role::tomcat_application
