--- a/tests/main.yml
+++ b/tests/main.yml
@@ -44,7 +44,19 @@
       - "data/{{ tomcat_application_name }}"
       - "resource/{{ tomcat_application_name }}"
     tomcat_application_datasources:
-      - name: "jdbc/{{ tomcat_application_name }}DS"
+      - name: "jdbc/{{ tomcat_application_name }}DS01"
+        auth: Container
+        type: acme.jdbc.pool.AcmeDataSource
+        factory: acme.jdbc.pool.AcmeDataSourceFactory
+        driverClassName: acme.jdbc.AcmeDriver
+        maxTotal: 100
+        maxIdle: 30
+        maxWaitMilli: 10000
+        url: dbc:acme:@DATABASE
+        user: app
+        password: app_password
+
+      - name: "jdbc/{{ tomcat_application_name }}DS02"
         auth: Container
         type: acme.jdbc.pool.AcmeDataSource
         factory: acme.jdbc.pool.AcmeDataSourceFactory
