--- a/tests/main.yml
+++ b/tests/main.yml
@@ -1,8 +1,6 @@
 ---
 # Tasks for testing role
 
-# FIXME: Check also sample application http visibility
-
 - name: run idempotence test
   hosts: localhost
   roles:
@@ -22,17 +20,22 @@
   hosts: docker_sandbox_containers
   roles:
     - role: amtega.tomcat
+      tomcat_instances:
+        - name: tomcat@server1
+          version: 8.0.9
+        - name: tomcat@server2
+          version: 8.0.9
+          server_port: 8006
+          server_http_port: 8081
+          server_https_port: 8444
+          server_ajp_port: 8010
   tasks:
-    - name: configure tomcat application variables
-      set_fact:
-        tomcat_instances:
-          - name: tomcat@server1
-            version: 8.0.9
-
     - name: download sample application
       get_url:
         url: https://tomcat.apache.org/tomcat-8.0-doc/appdev/sample/sample.war
         dest: /tmp
+        validate_certs: false
+        timeout: 60
   tags:
     - prepare
 
@@ -42,14 +45,21 @@
     - role: amtega.tomcat_application
   vars:
     tomcat_application_name: MyApp
-    tomcat_application_instance: tomcat@server1
+    tomcat_application_instances:
+      - tomcat@server1
+      - tomcat@server2
     tomcat_application_artifacts:
       - url: https://tomcat.apache.org/tomcat-8.0-doc/appdev/sample/sample.war
         dest: webapps
+        timeout: 60
+        validate_certs: false
       - url: https://tomcat.apache.org/tomcat-8.0-doc/appdev/sample/sample.war
         dest: webapps/sample2.war
+        timeout: 60
+        validate_certs: false
       - url: file:///tmp/sample.war
         dest: webapps/sample3.war
+        validate_certs: false
     tomcat_application_dirs:
       - "config/{{ tomcat_application_name }}"
       - "log/{{ tomcat_application_name }}"
@@ -81,13 +91,18 @@
         user: app
         password: app_password
   tasks:
+    - meta: flush_handlers
+
     - name: search application dirs
       stat:
-        path: "{{ tomcat_application_server_instance.base }}/{{ item }}"
-      loop: "{{ tomcat_application_dirs }}"
+        path: "{{ item.0.base }}/{{ item.1 }}"
+      loop: >-
+        {{ query('nested',
+                 tomcat_application_server_instances,
+                 tomcat_application_dirs) }}
       register: check_application_dirs_result
       loop_control:
-        label: "{{ tomcat_application_server_instance.base }}/{{ item }}"
+        label: "{{ item.0.base }}/{{ item.1 }}"
 
     - name: check application dirs exist
       assert:
@@ -99,26 +114,29 @@
 
     - name: check datasources config
       xml:
-        path: "{{ tomcat_application_server_instance.base }}/conf/context.xml"
-        xpath: "/Context/Resource[@name='{{ item.name }}']"
+        path: "{{ item.0.base }}/conf/context.xml"
+        xpath: "/Context/Resource[@name='{{ item.1.name }}']"
         content: attribute
       register: ds
       failed_when:
-        ds.matches[0].Resource.name != item.name | string
-        or ds.matches[0].Resource.auth != item.auth | string
-        or ds.matches[0].Resource.type != item.type | string
-        or ds.matches[0].Resource.factory != item.factory | string
+        ds.matches[0].Resource.name != item.1.name | string
+        or ds.matches[0].Resource.auth != item.1.auth | string
+        or ds.matches[0].Resource.type != item.1.type | string
+        or ds.matches[0].Resource.factory != item.1.factory | string
         or ds.matches[0].Resource.driverClassName
-           != item.driverClassName | string
-        or ds.matches[0].Resource.maxTotal != item.maxTotal | string
-        or ds.matches[0].Resource.maxIdle != item.maxIdle | string
-        or ds.matches[0].Resource.maxWaitMilli != item.maxWaitMilli | string
-        or ds.matches[0].Resource.url != item.url | string
-        or ds.matches[0].Resource.user != item.user | string
-        or ds.matches[0].Resource.password != item.password | string
-      loop: "{{ tomcat_application_datasources }}"
+           != item.1.driverClassName | string
+        or ds.matches[0].Resource.maxTotal != item.1.maxTotal | string
+        or ds.matches[0].Resource.maxIdle != item.1.maxIdle | string
+        or ds.matches[0].Resource.maxWaitMilli != item.1.maxWaitMilli | string
+        or ds.matches[0].Resource.url != item.1.url | string
+        or ds.matches[0].Resource.user != item.1.user | string
+        or ds.matches[0].Resource.password != item.1.password | string
+      loop: >-
+        {{ query('nested',
+                 tomcat_application_server_instances,
+                 tomcat_application_datasources) }}
       loop_control:
-        label: "{{ item.name }}"
+        label: "{{ item.0.name }} {{ item.1.name }}"
 
     - name: search application artifacts
       stat:
@@ -127,6 +145,9 @@
         - /srv/tomcat/tomcat@server1/webapps/sample.war
         - /srv/tomcat/tomcat@server1/webapps/sample2.war
         - /srv/tomcat/tomcat@server1/webapps/sample3.war
+        - /srv/tomcat/tomcat@server2/webapps/sample.war
+        - /srv/tomcat/tomcat@server2/webapps/sample2.war
+        - /srv/tomcat/tomcat@server2/webapps/sample3.war
       register: check_artifacts_result
 
     - name: check application artifacts exist
@@ -136,6 +157,17 @@
         {{ check_artifacts_result.results
            | map(attribute='stat.exists')
            | list }}
+
+    - name: check application is working
+      assert:
+        that: lookup('url', item) is search("Sample.*Hello.*World.*Application")
+      loop:
+        - http://localhost:8080/sample
+        - http://localhost:8080/sample2
+        - http://localhost:8080/sample3
+        - http://localhost:8081/sample
+        - http://localhost:8081/sample2
+        - http://localhost:8081/sample3
   tags:
     - idempotence
 
@@ -145,7 +177,9 @@
     - role: amtega.tomcat_application
   vars:
       tomcat_application_name: sample
-      tomcat_application_instance: tomcat@server1
+      tomcat_application_instances:
+        - tomcat@server1
+        - tomcat@server2
       tomcat_application_artifacts:
         - url: https://tomcat.apache.org/tomcat-8.0-doc/appdev/sample/sample.war
           dest: webapps
@@ -166,11 +200,14 @@
   tasks:
     - name: search application dirs
       stat:
-        path: "{{ tomcat_application_server_instance.base }}/{{ item }}"
-      loop: "{{ tomcat_application_dirs }}"
+        path: "{{ item.0.base }}/{{ item.1 }}"
+      loop: >-
+        {{ query('nested',
+                 tomcat_application_server_instances,
+                 tomcat_application_dirs) }}
       register: check_application_dirs_result
       loop_control:
-        label: "{{ tomcat_application_server_instance.base }}/{{ item }}"
+        label: "{{ item.0.base }}/{{ item.1 }}"
 
     - name: check application dirs does not exist
       assert:
@@ -182,14 +219,17 @@
 
     - name: check datasources config
       xml:
-        path: "{{ tomcat_application_server_instance.base }}/conf/context.xml"
-        xpath: "/Context/Resource[@name='{{ item.name }}']"
+        path: "{{ item.0.base }}/conf/context.xml"
+        xpath: "/Context/Resource[@name='{{ item.1.name }}']"
         content: attribute
       register: ds
       failed_when: ds.matches is defined
-      loop: "{{ tomcat_application_datasources }}"
+      loop: >-
+        {{ query('nested',
+                 tomcat_application_server_instances,
+                 tomcat_application_datasources) }}
       loop_control:
-        label: "{{ item.name }}"
+        label: "{{ item.0.name }} {{ item.1.name }}"
 
     - name: search application artifacts
       stat:
@@ -201,6 +241,12 @@
         - /srv/tomcat/tomcat@server1/webapps/sample
         - /srv/tomcat/tomcat@server1/webapps/sample2
         - /srv/tomcat/tomcat@server1/webapps/sample3
+        - /srv/tomcat/tomcat@server2/webapps/sample.war
+        - /srv/tomcat/tomcat@server2/webapps/sample2.war
+        - /srv/tomcat/tomcat@server2/webapps/sample3.war
+        - /srv/tomcat/tomcat@server2/webapps/sample
+        - /srv/tomcat/tomcat@server2/webapps/sample2
+        - /srv/tomcat/tomcat@server2/webapps/sample3
       register: check_application_artifacts_result
 
     - name: check application artifacts does not exist
