--- a/tests/main.yml
+++ b/tests/main.yml
@@ -279,7 +279,7 @@
         - http://localhost:8081/sample2
         - http://localhost:8081/sample3
 
-- name: cleanup docker docker sandbox
+- name: cleanup docker sandbox
   hosts: localhost
   roles:
     - role: amtega.docker_sandbox
